[project]
name = "zthob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-fsm>=2.8.0",
    "djangorestframework>=3.15.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.27.0",
    "pillow>=11.3.0",
    "django-jazzmin>=2.6.0",
    "firebase-admin>=6.0.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.9",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.7",
]
